--- a/Clash/config/private.ini
+++ b/Clash/config/private.ini
@@ -80,6 +80,6 @@ custom_proxy_group=🇯🇵 OpenAi节点`url-test`(openai|OpenAi|OpenAI|ChatGPT|
 enable_rule_generator=true
 overwrite_original_rules=true
 
-;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+clash_rule_base=https://raw.githubusercontent.com/chenglong-do/ACL/refs/heads/master/Clash/GeneralClashConfig.yml
 
 ;luck
