--- a/Clash/GeneralClashConfig.yml
+++ b/Clash/GeneralClashConfig.yml
@@ -63,7 +63,7 @@ experimental:
 #   'alpha.clash.dev': '::1'
 
 dns:
-  enable: true
+  enable: false
   ipv6: true
   default-nameserver: [223.5.5.5, 119.29.29.29, 8.8.8.8]
   enhanced-mode: fake-ip
